--- a/model_crop/Aligner.ipynb
+++ b/model_crop/Aligner.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, random, glob, math\n",
     "import numpy as np\n",
@@ -45,22 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4, 5, 6, 7])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "TRAIN_DIR = '../data/train/'\n",
     "TEST_DIR = '../data/test_stg1/'\n",
@@ -70,26 +51,20 @@
     "COLS = 224\n",
     "BatchSize = 64\n",
     "LearningRate = 1e-4\n",
+    "if not os.path.exists('./checkpoints'):\n",
+    "    os.mkdir('./checkpoints')\n",
     "le = LabelEncoder()\n",
     "le.fit(FISH_CLASSES)\n",
-    "le.transform(FISH_CLASSES)"
+    "le.transform(FISH_CLASSES)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exist images_annotations_224_224.pickle. Loading data from file.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Loading data\n",
     "\n",
@@ -145,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -259,15 +234,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "train_losses = []\n",
-    "val_losses = []\n",
-    "val_nb_batch = 20\n",
+    "valid_losses = []\n",
+    "val_nb_batch = 50\n",
     "\n",
     "\n",
     "def model_train(model, images_train, annotations_train, images_valid, annotations_valid, nb_batch = 1000):\n",
@@ -315,16 +290,16 @@
     "                    x_batch[count] = image_transformed\n",
     "                    y_batch[count] = [head_transformed[0],head_transformed[1],tail_transformed[0],tail_transformed[1]]\n",
     "                    count += 1\n",
-    "\n",
-    "        train_losses.append(model.train_on_batch(x_batch, y_batch))       \n",
+    "       \n",
+    "        train_losses.append(model.train_on_batch(x_batch, y_batch))\n",
     "        if i % val_nb_batch == 0:\n",
     "            print('Batch ', i)\n",
-    "            val_losses.append(model.evaluate(images_valid, annotations_valid, batch_size=BatchSize, verbose=1))  \n",
-    "            print('train_loss', train_losses[-1], 'val_losses', val_losses[-1])\n",
-    "            if val_losses[-1] < min_val_loss:\n",
-    "                min_val_loss = val_losses[-1]\n",
-    "                model.save('./checkpoints/model-{:.4f}.h5'.format(val_losses[-1]))\n",
-    "                print('Saving model-{:.4f}.h5'.format(val_losses[-1]))"
+    "            valid_losses.append(model.evaluate(images_valid, annotations_valid, batch_size=BatchSize, verbose=1))  \n",
+    "            print('batch_loss', train_losses[-1], 'valid_loss', valid_losses[-1])\n",
+    "            if valid_losses[-1] < min_val_loss:\n",
+    "                min_val_loss = valid_losses[-1]\n",
+    "                model.save('./checkpoints/model-{0}-{1:.1f}-{2:.1f}.h5'.format(i,train_losses[-1],valid_losses[-1]))\n",
+    "                print('Saving model-{0}-{1:.1f}-{2:.1f}.h5'.format(i,train_losses[-1],valid_losses[-1]))"
    ]
   },
   {
@@ -333,22 +308,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch  20\n",
-      "660/660 [==============================] - 20s    \n",
-      "train_loss 14345.8 val_losses 11964.0433475\n",
-      "Saving model-11964.0433.h5\n",
-      "Batch  40\n",
-      "660/660 [==============================] - 10s    \n",
-      "train_loss 13572.9 val_losses 10041.8991951\n",
-      "Saving model-10041.8992.h5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#stg1 training\n",
     "\n",
@@ -361,9 +321,11 @@
     "x = base_model.output\n",
     "x = GlobalAveragePooling2D()(x)\n",
     "x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
-    "#x = Dropout(0.5)(x)\n",
+    "#x = LeakyReLU(alpha=0.33)(x)\n",
+    "x = Dropout(0.5)(x)\n",
     "x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
-    "#x = Dropout(0.5)(x)\n",
+    "#x = LeakyReLU(alpha=0.33)(x)\n",
+    "x = Dropout(0.5)(x)\n",
     "predictions = Dense(4, init='glorot_normal')(x)\n",
     "\n",
     "# this is the model we will train\n",
@@ -378,7 +340,7 @@
     "model.compile(optimizer=optimizer, loss='mean_squared_error')\n",
     "\n",
     "# train the model on the new data for a few epochs\n",
-    "model_train(model, images_train, annotations_train, images_valid, annotations_valid, nb_batch=1000)"
+    "model_train(model, images_train, annotations_train, images_valid, annotations_valid, nb_batch=1001)"
    ]
   },
   {
@@ -419,7 +381,7 @@
     "# we train our model again (this time fine-tuning the top 2 inception blocks\n",
     "# alongside the top Dense layers\n",
     "\n",
-    "model_train(model, images_train, annotations_train, images_valid, annotations_valid, nb_batch=1000)"
+    "model_train(model, images_train, annotations_train, images_valid, annotations_valid, nb_batch=1001)"
    ]
   },
   {
@@ -438,7 +400,7 @@
     "print('Loading model from checkpoints file ' + files[index])\n",
     "model = load_model(files[index])\n",
     "\n",
-    "model_train(model, images_train, annotations_train, images_valid, annotations_valid, nb_batch=1000)"
+    "model_train(model, images_train, annotations_train, images_valid, annotations_valid, nb_batch=1001)"
    ]
   },
   {
@@ -449,7 +411,22 @@
    },
    "outputs": [],
    "source": [
-    "plt.plot(train_losses); plt.plot([val_nb_batch*i for i in range(len(val_losses))], val_losses); \n",
+    "files = glob.glob('./checkpoints/*')\n",
+    "val_losses = [float(f.split('-')[-1][:-5]) for f in files]\n",
+    "index = val_losses.index(min(val_losses))\n",
+    "print('Loading model from checkpoints file ' + files[index])\n",
+    "model = load_model(files[index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(train_losses); plt.plot([val_nb_batch*i for i in range(len(valid_losses))], valid_losses); \n",
     "plt.title('model loss'); plt.ylabel('mse'); plt.xlabel('batch');\n",
     "plt.legend(['train', 'valid'], loc='upper left');\n",
     "plt.show()"
@@ -459,60 +436,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#test submission\n",
-    "\n",
-    "import datetime\n",
-    "\n",
-    "if os.path.exists('../data/data_test_{}_{}.pickle'.format(ROWS, COLS)):\n",
-    "    print ('Exist data_test_{}_{}.pickle. Loading test data from file.'.format(ROWS, COLS))\n",
-    "    with open('../data/data_test_{}_{}.pickle'.format(ROWS, COLS), 'rb') as f:\n",
-    "        data_test = pickle.load(f)\n",
-    "    X_test = data_test['X_test']\n",
-    "    test_files = data_test['test_files']\n",
-    "else:\n",
-    "    print ('Loading test data from original images. Generating data_test_{}_{}.pickle.'.format(ROWS, COLS))\n",
-    "\n",
-    "    test_files = [im for im in os.listdir(TEST_DIR)]\n",
-    "    X_test = np.ndarray((len(test_files), ROWS, COLS, 3), dtype=np.uint8)\n",
-    "\n",
-    "    for i, im in enumerate(test_files): \n",
-    "        X_test[i] = read_image(TEST_DIR+im)\n",
-    "        if i%300 == 0: print('Processed {} of {}'.format(i, len(test_files)))\n",
-    "            \n",
-    "    data_test = {'X_test': X_test,'test_files': test_files }\n",
-    "    \n",
-    "    with open('../data/data_test_{}_{}.pickle'.format(ROWS, COLS), 'wb') as f:\n",
-    "        pickle.dump(data_test, f)\n",
-    "            \n",
-    "X_test = X_test / 255.\n",
-    "\n",
-    "files = glob.glob('./checkpoints/*')\n",
-    "val_losses = [float(f.split('-')[-1][:-5]) for f in files]\n",
-    "index = val_losses.index(min(val_losses))\n",
-    "model = load_model(files[index])\n",
-    "\n",
-    "test_preds = model.predict(X_test, batch_size=BatchSize, verbose=1)\n",
-    "#test_preds= test_preds / np.sum(test_preds,axis=1,keepdims=True)\n",
-    "\n",
-    "submission = pd.DataFrame(test_preds, columns=FISH_CLASSES)\n",
-    "#submission.loc[:, 'image'] = pd.Series(test_files, index=submission.index)\n",
-    "submission.insert(0, 'image', test_files)\n",
-    "\n",
-    "now = datetime.datetime.now()\n",
-    "info = modelStr + '{:.4f}'.format(min(val_losses))\n",
-    "sub_file = 'submission_' + info + '_' + str(now.strftime(\"%Y-%m-%d-%H-%M\")) + '.csv'\n",
-    "submission.to_csv(sub_file, index=False)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "###clear checkpoints folder\n",
     "\n",
