--- a/RFCN/Data to Pascal VOC Format.ipynb
+++ b/RFCN/Data to Pascal VOC Format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -30,11 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALB/img_00568.jpg\n",
+      "no bbox\n",
+      "ALB/img_07439.jpg\n",
+      "no bbox\n"
+     ]
+    }
+   ],
    "source": [
     "#write Annotations\n",
     "if not os.path.exists('./Annotations'):\n",
@@ -49,53 +60,56 @@
     "\n",
     "for c in crop_classes:\n",
     "    j = json.load(open('../data/BBannotations/{}.json'.format(c), 'r'))\n",
-    "    for l in j:\n",
+    "    for l in j: \n",
     "        filename = l[\"filename\"]\n",
-    "        print(filename)\n",
     "        head, tail = os.path.split(filename)\n",
-    "        basename, file_extension = os.path.splitext(tail)    \n",
-    "        f = open('Annotations/' + basename + '.xml','w') \n",
-    "        line = \"<annotation>\" + '\\n'\n",
-    "        f.write(line)\n",
-    "        line = '\\t<folder>' + c + '</folder>' + '\\n'\n",
-    "        f.write(line)\n",
-    "        line = '\\t<filename>' + tail + '</filename>' + '\\n'\n",
-    "        f.write(line)\n",
-    "        line = '\\t<source>\\n\\t\\t<database>Source</database>\\n\\t</source>\\n'\n",
-    "        f.write(line)\n",
-    "        im=Image.open(TRAIN_DIR+ c + '/' + tail)\n",
-    "        (width, height) = im.size\n",
-    "        line = '\\t<size>\\n\\t\\t<width>'+ str(width) + '</width>\\n\\t\\t<height>' + \\\n",
-    "        str(height) + '</height>\\n\\t\\t<depth>3</depth>\\n\\t</size>'\n",
-    "        f.write(line)\n",
-    "        line = '\\n\\t<segmented>Unspecified</segmented>'\n",
-    "        f.write(line)\n",
-    "        for a in l[\"annotations\"]:\n",
-    "            line = '\\n\\t<object>'\n",
-    "            line += '\\n\\t\\t<name>' + a[\"class\"] + '</name>\\n\\t\\t<pose>Unspecified</pose>'\n",
-    "            #line += '\\n\\t\\t<name>fish</name>\\n\\t\\t<pose>Unspecified</pose>'\n",
-    "            line += '\\n\\t\\t<truncated>Unspecified</truncated>\\n\\t\\t<difficult>Unspecified</difficult>'\n",
-    "            xmin = (a[\"x\"])\n",
-    "            line += '\\n\\t\\t<bndbox>\\n\\t\\t\\t<xmin>' + str(xmin) + '</xmin>'\n",
-    "            ymin = (a[\"y\"])\n",
-    "            line += '\\n\\t\\t\\t<ymin>' + str(ymin) + '</ymin>'\n",
-    "            width = (a[\"width\"])\n",
-    "            height = (a[\"height\"])\n",
-    "            xmax = xmin + width\n",
-    "            ymax = ymin + height\n",
-    "            line += '\\n\\t\\t\\t<xmax>' + str(xmax) + '</xmax>'\n",
-    "            line += '\\n\\t\\t\\t<ymax>' + str(ymax) + '</ymax>'\n",
-    "            line += '\\n\\t\\t</bndbox>'\n",
-    "            line += '\\n\\t</object>'     \n",
+    "        basename, file_extension = os.path.splitext(tail) \n",
+    "        if len(l[\"annotations\"]) == 0:\n",
+    "            print(filename)\n",
+    "            print(\"no bbox\")\n",
+    "        else:\n",
+    "            f = open('Annotations/' + basename + '.xml','w') \n",
+    "            line = \"<annotation>\" + '\\n'\n",
     "            f.write(line)\n",
-    "        line = '</annotation>'\n",
-    "        f.write(line)\n",
-    "        f.close()"
+    "            line = '\\t<folder>' + c + '</folder>' + '\\n'\n",
+    "            f.write(line)\n",
+    "            line = '\\t<filename>' + tail + '</filename>' + '\\n'\n",
+    "            f.write(line)\n",
+    "            line = '\\t<source>\\n\\t\\t<database>Source</database>\\n\\t</source>\\n'\n",
+    "            f.write(line)\n",
+    "            im=Image.open(TRAIN_DIR+ c + '/' + tail)\n",
+    "            (width, height) = im.size\n",
+    "            line = '\\t<size>\\n\\t\\t<width>'+ str(width) + '</width>\\n\\t\\t<height>' + \\\n",
+    "            str(height) + '</height>\\n\\t\\t<depth>3</depth>\\n\\t</size>'\n",
+    "            f.write(line)\n",
+    "            line = '\\n\\t<segmented>Unspecified</segmented>'\n",
+    "            f.write(line)\n",
+    "            for a in l[\"annotations\"]:\n",
+    "                line = '\\n\\t<object>'\n",
+    "                line += '\\n\\t\\t<name>' + a[\"class\"] + '</name>\\n\\t\\t<pose>Unspecified</pose>'\n",
+    "                #line += '\\n\\t\\t<name>fish</name>\\n\\t\\t<pose>Unspecified</pose>'\n",
+    "                line += '\\n\\t\\t<truncated>Unspecified</truncated>\\n\\t\\t<difficult>Unspecified</difficult>'\n",
+    "                xmin = (a[\"x\"])\n",
+    "                line += '\\n\\t\\t<bndbox>\\n\\t\\t\\t<xmin>' + str(xmin) + '</xmin>'\n",
+    "                ymin = (a[\"y\"])\n",
+    "                line += '\\n\\t\\t\\t<ymin>' + str(ymin) + '</ymin>'\n",
+    "                width = (a[\"width\"])\n",
+    "                height = (a[\"height\"])\n",
+    "                xmax = xmin + width\n",
+    "                ymax = ymin + height\n",
+    "                line += '\\n\\t\\t\\t<xmax>' + str(xmax) + '</xmax>'\n",
+    "                line += '\\n\\t\\t\\t<ymax>' + str(ymax) + '</ymax>'\n",
+    "                line += '\\n\\t\\t</bndbox>'\n",
+    "                line += '\\n\\t</object>'     \n",
+    "                f.write(line)\n",
+    "            line = '</annotation>'\n",
+    "            f.write(line)\n",
+    "            f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
