add test images to RFCN

--- a/RFCN/Data to Pascal VOC Format.ipynb
+++ b/RFCN/Data to Pascal VOC Format.ipynb
@@ -158,7 +158,24 @@
     "            f.write(im + '\\n')\n",
     "    with open('./ImageSets/Main/' + fish + '_trainval.txt','w') as f:\n",
     "        for im in trainval_fish:\n",
-    "            f.write(im + '\\n')"
+    "            f.write(im + '\\n')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fish_dir = TEST_DIR\n",
+    "imgs = [os.path.splitext(im)[0] for im in os.listdir(fish_dir)]\n",
+    "with open('./ImageSets/Main/test.txt','w') as f:\n",
+    "    test = sorted(imgs)\n",
+    "    for im in test:\n",
+    "        f.write(im + '\\n')"
    ]
   },
   {
