--- a/RFCN/Data to Pascal VOC Format.ipynb
+++ b/RFCN/Data to Pascal VOC Format.ipynb
@@ -58,6 +58,7 @@
     "crop_classes.remove('NoF')\n",
     "crop_classes\n",
     "\n",
+    "\n",
     "for c in crop_classes:\n",
     "    j = json.load(open('../data/BBannotations/{}.json'.format(c), 'r'))\n",
     "    for l in j: \n",
@@ -105,6 +106,18 @@
     "            line = '</annotation>'\n",
     "            f.write(line)\n",
     "            f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for fish in FISH_CLASSES:\n",
+    "    "
    ]
   },
   {
@@ -191,21 +204,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
