add train imgs to test RFCN

--- a/RFCN/Data to Pascal VOC Format.ipynb
+++ b/RFCN/Data to Pascal VOC Format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -110,14 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for fish in FISH_CLASSES:\n",
-    "    "
+    "with open('./ImageSets/Main/train_test.txt','w') as f:\n",
+    "    for fish in FISH_CLASSES:\n",
+    "        fish_dir = TRAIN_DIR+'{}'.format(fish)\n",
+    "        imgs_fish = [os.path.splitext(im)[0] for im in os.listdir(fish_dir)]\n",
+    "        for im in sorted(imgs_fish):\n",
+    "            f.write(im + ' {}\\n'.format(fish))\n",
+    "            \n",
+    "#manually change from ALB to NoF of img_00568 and img_07439"
    ]
   },
   {
@@ -177,17 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "fish_dir = TEST_DIR\n",
-    "imgs = [os.path.splitext(im)[0] for im in os.listdir(fish_dir)]\n",
+    "imgs_test = [os.path.splitext(im)[0] for im in os.listdir(fish_dir)]\n",
+    "with open(\"./ImageSets/Main/train_test.txt\",\"r\") as f:\n",
+    "    ims = f.readlines()\n",
+    "imgs_train = [im[:9] for im in ims]\n",
+    "\n",
     "with open('./ImageSets/Main/test.txt','w') as f:\n",
-    "    test = sorted(imgs)\n",
-    "    for im in test:\n",
+    "    for im in sorted(imgs_test):\n",
+    "        f.write(im + '\\n')\n",
+    "    for im in sorted(imgs_train):\n",
     "        f.write(im + '\\n')"
    ]
   },
@@ -204,21 +215,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
