add train images to test RFCN

--- a/RFCN/Data to Pascal VOC Format.ipynb
+++ b/RFCN/Data to Pascal VOC Format.ipynb
@@ -110,24 +110,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "with open('./ImageSets/Main/train_test.txt','w') as f:\n",
-    "    for fish in FISH_CLASSES:\n",
-    "        fish_dir = TRAIN_DIR+'{}'.format(fish)\n",
-    "        imgs_fish = [os.path.splitext(im)[0] for im in os.listdir(fish_dir)]\n",
-    "        for im in sorted(imgs_fish):\n",
-    "            f.write(im + ' {}\\n'.format(fish))\n",
-    "            \n",
-    "#manually change from ALB to NoF of img_00568 and img_07439"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
@@ -145,8 +127,11 @@
     "crop_classes.remove('NoF')\n",
     "crop_classes\n",
     "\n",
-    "fish_dir = './JPEGImages'\n",
-    "imgs = [os.path.splitext(im)[0] for im in os.listdir(fish_dir)]\n",
+    "imgs = []\n",
+    "for fish in crop_classes:\n",
+    "    fish_dir = TRAIN_DIR+'{}'.format(fish)\n",
+    "    imgs_fish = [os.path.splitext(im)[0] for im in os.listdir(fish_dir)]\n",
+    "    imgs.extend(imgs_fish)\n",
     "index = np.random.permutation(len(imgs))\n",
     "imgs = [imgs[i] for i in index]\n",
     "num_train = math.ceil(len(imgs)*0.8)\n",
@@ -162,6 +147,7 @@
     "    trainval = sorted(imgs)\n",
     "    for im in trainval:\n",
     "        f.write(im + '\\n')\n",
+    "#del img_00568 and img_07439\n",
     "\n",
     "for fish in crop_classes:\n",
     "    fish_dir = TRAIN_DIR+'{}'.format(fish)\n",
@@ -179,6 +165,24 @@
     "        for im in trainval_fish:\n",
     "            f.write(im + '\\n')\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('./ImageSets/Main/train_test.txt','w') as f:\n",
+    "    for fish in FISH_CLASSES:\n",
+    "        fish_dir = TRAIN_DIR+'{}'.format(fish)\n",
+    "        imgs_fish = [os.path.splitext(im)[0] for im in os.listdir(fish_dir)]\n",
+    "        for im in sorted(imgs_fish):\n",
+    "            f.write(im + ' {}\\n'.format(fish))\n",
+    "            \n",
+    "#manually change from ALB to NoF of img_00568 and img_07439"
    ]
   },
   {
@@ -201,15 +205,6 @@
     "    for im in sorted(imgs_train):\n",
     "        f.write(im + '\\n')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
