--- a/model_bbox/Classifier.ipynb
+++ b/model_bbox/Classifier.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, random, glob\n",
     "import numpy as np\n",
@@ -42,11 +50,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "TRAIN_DIR = '../data/train/'\n",
     "TEST_DIR = '../RFCN/JPEGImages/'\n",
@@ -64,12 +83,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../data/train_crop/LAG/ALB_img_01800_6_LAG.jpg\n",
+      "../data/train_crop/LAG/ALB_img_03397_1_LAG.jpg\n",
+      "../data/train_crop/LAG/ALB_img_03451_1_LAG.jpg\n",
+      "../data/train_crop/LAG/ALB_img_03748_4_LAG.jpg\n",
+      "../data/train_crop/ALB/DOL_img_07212_1_ALB.jpg\n",
+      "../data/train_crop/ALB/DOL_img_07212_2_ALB.jpg\n",
+      "../data/train_crop/LAG/SHARK_img_06082_0_LAG.jpg\n",
+      "../data/train_crop/ALB/SHARK_img_06082_1_ALB.jpg\n",
+      "../data/train_crop/ALB/SHARK_img_06082_2_ALB.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "#crop and cache to TRAIN_CROP_DIR\n",
     "if not os.path.exists(TRAIN_CROP_DIR):\n",
@@ -154,11 +189,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exist data_train_BBCrop_270_480.pickle. Loading data from file.\n"
+     ]
+    }
+   ],
    "source": [
     "#Loading data\n",
     "import pickle\n",
@@ -221,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -251,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -596,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
