--- a/model_bbox/Classifier.ipynb
+++ b/model_bbox/Classifier.ipynb
@@ -313,11 +313,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 1.9705 - acc: 0.3609"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py:1470: UserWarning: Epoch comprised more than `samples_per_epoch` samples, which might affect learning results. Set `samples_per_epoch` correctly to avoid this warning.\n",
+      "  warnings.warn('Epoch comprised more than '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 00000: val_loss improved from inf to 2.19270, saving model to ./checkpoints/weights.000-2.1927.hdf5\n",
+      "3904/3868 [==============================] - 177s - loss: 1.9661 - acc: 0.3619 - val_loss: 2.1927 - val_acc: 0.4805\n",
+      "Epoch 2/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 1.5559 - acc: 0.4984Epoch 00001: val_loss improved from 2.19270 to 1.90339, saving model to ./checkpoints/weights.001-1.9034.hdf5\n",
+      "3904/3868 [==============================] - 166s - loss: 1.5496 - acc: 0.5015 - val_loss: 1.9034 - val_acc: 0.5322\n",
+      "Epoch 3/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 1.3942 - acc: 0.5461Epoch 00002: val_loss improved from 1.90339 to 1.83117, saving model to ./checkpoints/weights.002-1.8312.hdf5\n",
+      "3924/3868 [==============================] - 168s - loss: 1.3981 - acc: 0.5456 - val_loss: 1.8312 - val_acc: 0.5273\n",
+      "Epoch 4/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 1.2804 - acc: 0.5927Epoch 00003: val_loss improved from 1.83117 to 1.80418, saving model to ./checkpoints/weights.003-1.8042.hdf5\n",
+      "3904/3868 [==============================] - 166s - loss: 1.2819 - acc: 0.5935 - val_loss: 1.8042 - val_acc: 0.5186\n",
+      "Epoch 5/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 1.2488 - acc: 0.5982Epoch 00004: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 1.2502 - acc: 0.5978 - val_loss: 1.8170 - val_acc: 0.5088\n",
+      "Epoch 6/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 1.1507 - acc: 0.6192Epoch 00005: val_loss improved from 1.80418 to 1.73375, saving model to ./checkpoints/weights.005-1.7337.hdf5\n",
+      "3924/3868 [==============================] - 166s - loss: 1.1451 - acc: 0.6205 - val_loss: 1.7337 - val_acc: 0.5361\n",
+      "Epoch 7/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 1.1074 - acc: 0.6359Epoch 00006: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 1.1076 - acc: 0.6360 - val_loss: 1.7609 - val_acc: 0.5273\n",
+      "Epoch 8/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 1.1134 - acc: 0.6260Epoch 00007: val_loss improved from 1.73375 to 1.72027, saving model to ./checkpoints/weights.007-1.7203.hdf5\n",
+      "3904/3868 [==============================] - 166s - loss: 1.1062 - acc: 0.6294 - val_loss: 1.7203 - val_acc: 0.5625\n",
+      "Epoch 9/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 1.0785 - acc: 0.6376Epoch 00008: val_loss improved from 1.72027 to 1.67434, saving model to ./checkpoints/weights.008-1.6743.hdf5\n",
+      "3924/3868 [==============================] - 165s - loss: 1.0757 - acc: 0.6381 - val_loss: 1.6743 - val_acc: 0.5742\n",
+      "Epoch 10/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 1.0294 - acc: 0.6505Epoch 00009: val_loss improved from 1.67434 to 1.64761, saving model to ./checkpoints/weights.009-1.6476.hdf5\n",
+      "3904/3868 [==============================] - 166s - loss: 1.0269 - acc: 0.6516 - val_loss: 1.6476 - val_acc: 0.5684\n",
+      "Epoch 11/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 1.0385 - acc: 0.6477Epoch 00010: val_loss improved from 1.64761 to 1.59848, saving model to ./checkpoints/weights.010-1.5985.hdf5\n",
+      "3904/3868 [==============================] - 165s - loss: 1.0396 - acc: 0.6483 - val_loss: 1.5985 - val_acc: 0.5674\n",
+      "Epoch 12/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.9993 - acc: 0.6655Epoch 00011: val_loss improved from 1.59848 to 1.48698, saving model to ./checkpoints/weights.011-1.4870.hdf5\n",
+      "3924/3868 [==============================] - 165s - loss: 0.9992 - acc: 0.6659 - val_loss: 1.4870 - val_acc: 0.5361\n",
+      "Epoch 13/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.9626 - acc: 0.6852Epoch 00012: val_loss improved from 1.48698 to 1.34949, saving model to ./checkpoints/weights.012-1.3495.hdf5\n",
+      "3904/3868 [==============================] - 165s - loss: 0.9625 - acc: 0.6844 - val_loss: 1.3495 - val_acc: 0.5811\n",
+      "Epoch 14/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.9470 - acc: 0.6716Epoch 00013: val_loss improved from 1.34949 to 1.26585, saving model to ./checkpoints/weights.013-1.2659.hdf5\n",
+      "3904/3868 [==============================] - 165s - loss: 0.9450 - acc: 0.6719 - val_loss: 1.2659 - val_acc: 0.6191\n",
+      "Epoch 15/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.9604 - acc: 0.6705Epoch 00014: val_loss improved from 1.26585 to 1.08836, saving model to ./checkpoints/weights.014-1.0884.hdf5\n",
+      "3924/3868 [==============================] - 167s - loss: 0.9599 - acc: 0.6702 - val_loss: 1.0884 - val_acc: 0.6543\n",
+      "Epoch 16/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.9059 - acc: 0.6865Epoch 00015: val_loss improved from 1.08836 to 0.99485, saving model to ./checkpoints/weights.015-0.9948.hdf5\n",
+      "3904/3868 [==============================] - 166s - loss: 0.9104 - acc: 0.6849 - val_loss: 0.9948 - val_acc: 0.6729\n",
+      "Epoch 17/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.9197 - acc: 0.6839Epoch 00016: val_loss improved from 0.99485 to 0.86695, saving model to ./checkpoints/weights.016-0.8670.hdf5\n",
+      "3904/3868 [==============================] - 166s - loss: 0.9172 - acc: 0.6842 - val_loss: 0.8670 - val_acc: 0.6963\n",
+      "Epoch 18/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.8863 - acc: 0.6935Epoch 00017: val_loss did not improve\n",
+      "3924/3868 [==============================] - 166s - loss: 0.8884 - acc: 0.6922 - val_loss: 0.8839 - val_acc: 0.6963\n",
+      "Epoch 19/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.8509 - acc: 0.7034Epoch 00018: val_loss improved from 0.86695 to 0.78527, saving model to ./checkpoints/weights.018-0.7853.hdf5\n",
+      "3904/3868 [==============================] - 166s - loss: 0.8505 - acc: 0.7039 - val_loss: 0.7853 - val_acc: 0.7266\n",
+      "Epoch 20/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.8876 - acc: 0.6951Epoch 00019: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 0.8857 - acc: 0.6954 - val_loss: 0.8274 - val_acc: 0.7188\n",
+      "Epoch 21/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.8346 - acc: 0.7145Epoch 00020: val_loss did not improve\n",
+      "3924/3868 [==============================] - 166s - loss: 0.8364 - acc: 0.7128 - val_loss: 0.7999 - val_acc: 0.7266\n",
+      "Epoch 22/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.8515 - acc: 0.7008Epoch 00021: val_loss improved from 0.78527 to 0.77103, saving model to ./checkpoints/weights.021-0.7710.hdf5\n",
+      "3904/3868 [==============================] - 166s - loss: 0.8498 - acc: 0.7016 - val_loss: 0.7710 - val_acc: 0.7402\n",
+      "Epoch 23/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.8409 - acc: 0.7060Epoch 00022: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 0.8423 - acc: 0.7052 - val_loss: 0.7944 - val_acc: 0.7266\n",
+      "Epoch 24/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.8067 - acc: 0.7171Epoch 00023: val_loss did not improve\n",
+      "3924/3868 [==============================] - 166s - loss: 0.8073 - acc: 0.7171 - val_loss: 0.7824 - val_acc: 0.7363\n",
+      "Epoch 25/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.8226 - acc: 0.7206Epoch 00024: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 0.8275 - acc: 0.7195 - val_loss: 0.7812 - val_acc: 0.7354\n",
+      "Epoch 26/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.8119 - acc: 0.7276Epoch 00025: val_loss improved from 0.77103 to 0.73947, saving model to ./checkpoints/weights.025-0.7395.hdf5\n",
+      "3904/3868 [==============================] - 167s - loss: 0.8105 - acc: 0.7282 - val_loss: 0.7395 - val_acc: 0.7500\n",
+      "Epoch 27/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.7953 - acc: 0.7207Epoch 00026: val_loss improved from 0.73947 to 0.70311, saving model to ./checkpoints/weights.026-0.7031.hdf5\n",
+      "3924/3868 [==============================] - 166s - loss: 0.8008 - acc: 0.7187 - val_loss: 0.7031 - val_acc: 0.7666\n",
+      "Epoch 28/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7741 - acc: 0.7286Epoch 00027: val_loss did not improve\n",
+      "3904/3868 [==============================] - 164s - loss: 0.7756 - acc: 0.7277 - val_loss: 0.7623 - val_acc: 0.7363\n",
+      "Epoch 29/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7764 - acc: 0.7365Epoch 00028: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 0.7788 - acc: 0.7351 - val_loss: 0.7383 - val_acc: 0.7480\n",
+      "Epoch 30/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.7663 - acc: 0.7342Epoch 00029: val_loss did not improve\n",
+      "3924/3868 [==============================] - 166s - loss: 0.7625 - acc: 0.7360 - val_loss: 0.7240 - val_acc: 0.7656\n",
+      "Epoch 31/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7486 - acc: 0.7393Epoch 00030: val_loss did not improve\n",
+      "3904/3868 [==============================] - 166s - loss: 0.7493 - acc: 0.7392 - val_loss: 0.7312 - val_acc: 0.7549\n",
+      "Epoch 32/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7820 - acc: 0.7297Epoch 00031: val_loss improved from 0.70311 to 0.67302, saving model to ./checkpoints/weights.031-0.6730.hdf5\n",
+      "3904/3868 [==============================] - 166s - loss: 0.7832 - acc: 0.7285 - val_loss: 0.6730 - val_acc: 0.7803\n",
+      "Epoch 33/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.7446 - acc: 0.7409Epoch 00032: val_loss did not improve\n",
+      "3924/3868 [==============================] - 166s - loss: 0.7447 - acc: 0.7406 - val_loss: 0.6791 - val_acc: 0.7646\n",
+      "Epoch 34/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7589 - acc: 0.7339Epoch 00033: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 0.7598 - acc: 0.7341 - val_loss: 0.7013 - val_acc: 0.7764\n",
+      "Epoch 35/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7296 - acc: 0.7461Epoch 00034: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 0.7335 - acc: 0.7459 - val_loss: 0.7264 - val_acc: 0.7676\n",
+      "Epoch 36/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.7205 - acc: 0.7464Epoch 00035: val_loss improved from 0.67302 to 0.65191, saving model to ./checkpoints/weights.035-0.6519.hdf5\n",
+      "3924/3868 [==============================] - 167s - loss: 0.7189 - acc: 0.7467 - val_loss: 0.6519 - val_acc: 0.7881\n",
+      "Epoch 37/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7350 - acc: 0.7411Epoch 00036: val_loss did not improve\n",
+      "3904/3868 [==============================] - 166s - loss: 0.7328 - acc: 0.7413 - val_loss: 0.6706 - val_acc: 0.7773\n",
+      "Epoch 38/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7106 - acc: 0.7513Epoch 00037: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 0.7085 - acc: 0.7520 - val_loss: 0.6896 - val_acc: 0.7725\n",
+      "Epoch 39/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.7237 - acc: 0.7484Epoch 00038: val_loss did not improve\n",
+      "3924/3868 [==============================] - 166s - loss: 0.7213 - acc: 0.7482 - val_loss: 0.6904 - val_acc: 0.7705\n",
+      "Epoch 40/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7082 - acc: 0.7529Epoch 00039: val_loss did not improve\n",
+      "3904/3868 [==============================] - 166s - loss: 0.7083 - acc: 0.7526 - val_loss: 0.6980 - val_acc: 0.7627\n",
+      "Epoch 41/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7116 - acc: 0.7521Epoch 00040: val_loss improved from 0.65191 to 0.60545, saving model to ./checkpoints/weights.040-0.6054.hdf5\n",
+      "3904/3868 [==============================] - 167s - loss: 0.7116 - acc: 0.7518 - val_loss: 0.6054 - val_acc: 0.7910\n",
+      "Epoch 42/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.7075 - acc: 0.7575Epoch 00041: val_loss did not improve\n",
+      "3924/3868 [==============================] - 166s - loss: 0.7064 - acc: 0.7576 - val_loss: 0.6484 - val_acc: 0.7891\n",
+      "Epoch 43/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7045 - acc: 0.7529Epoch 00042: val_loss did not improve\n",
+      "3904/3868 [==============================] - 166s - loss: 0.7059 - acc: 0.7523 - val_loss: 0.6697 - val_acc: 0.7793\n",
+      "Epoch 44/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.6940 - acc: 0.7591Epoch 00043: val_loss did not improve\n",
+      "3904/3868 [==============================] - 166s - loss: 0.6976 - acc: 0.7572 - val_loss: 0.6519 - val_acc: 0.7734\n",
+      "Epoch 45/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.6915 - acc: 0.7459Epoch 00044: val_loss did not improve\n",
+      "3924/3868 [==============================] - 164s - loss: 0.6907 - acc: 0.7452 - val_loss: 0.6723 - val_acc: 0.7783\n",
+      "Epoch 46/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.7134 - acc: 0.7557Epoch 00045: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 0.7128 - acc: 0.7549 - val_loss: 0.6645 - val_acc: 0.7861\n",
+      "Epoch 47/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.6747 - acc: 0.7667Epoch 00046: val_loss did not improve\n",
+      "\n",
+      "Epoch 00046: reducing learning rate to 9.999999747378752e-06.\n",
+      "3904/3868 [==============================] - 166s - loss: 0.6741 - acc: 0.7669 - val_loss: 0.6624 - val_acc: 0.7754\n",
+      "Epoch 48/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.6682 - acc: 0.7681Epoch 00047: val_loss did not improve\n",
+      "3924/3868 [==============================] - 167s - loss: 0.6680 - acc: 0.7686 - val_loss: 0.6657 - val_acc: 0.7744\n",
+      "Epoch 49/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.6695 - acc: 0.7680Epoch 00048: val_loss did not improve\n",
+      "3904/3868 [==============================] - 165s - loss: 0.6693 - acc: 0.7684 - val_loss: 0.6558 - val_acc: 0.7764\n",
+      "Epoch 50/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.6945 - acc: 0.7544Epoch 00049: val_loss did not improve\n",
+      "3904/3868 [==============================] - 166s - loss: 0.6922 - acc: 0.7549 - val_loss: 0.6525 - val_acc: 0.7871\n",
+      "Epoch 51/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.7055 - acc: 0.7521Epoch 00050: val_loss did not improve\n",
+      "3924/3868 [==============================] - 165s - loss: 0.7062 - acc: 0.7510 - val_loss: 0.6085 - val_acc: 0.7891\n",
+      "Epoch 52/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.6800 - acc: 0.7617Epoch 00051: val_loss did not improve\n",
+      "\n",
+      "Epoch 00051: reducing learning rate to 9.999999747378752e-07.\n",
+      "3904/3868 [==============================] - 165s - loss: 0.6802 - acc: 0.7608 - val_loss: 0.6289 - val_acc: 0.7764\n",
+      "Epoch 00051: early stopping\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f010ed69048>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Resnet50\n",
     "#stg1 training\n",
@@ -368,13 +561,24 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from checkpoints file ./checkpoints/weights.040-0.6054.hdf5\n"
+     ]
+    }
+   ],
    "source": [
     "#Resnet50\n",
     "#stg2 training\n",
     "\n",
-    "print('Loading model from checkpoints file weights.023-0.9773.hdf5')\n",
-    "model = load_model('./checkpoints/weights.023-0.9773.hdf5')\n",
+    "files = glob.glob('./checkpoints/*')\n",
+    "val_losses = [float(f.split('-')[-1][:-5]) for f in files]\n",
+    "index = val_losses.index(min(val_losses))\n",
+    "print('Loading model from checkpoints file ' + files[index])\n",
+    "model = load_model(files[index])\n",
     "\n",
     "from keras.applications.resnet50 import ResNet50\n",
     "\n",
@@ -656,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
