--- a/model_bbox/Classifier.ipynb
+++ b/model_bbox/Classifier.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -566,8 +566,300 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model from checkpoints file ./checkpoints/weights.040-0.6054.hdf5\n"
+      "Loading model from checkpoints file ./checkpoints/weights.040-0.6054.hdf5\n",
+      "0 input_2\n",
+      "1 zeropadding2d_2\n",
+      "2 conv1\n",
+      "3 bn_conv1\n",
+      "4 activation_50\n",
+      "5 maxpooling2d_2\n",
+      "6 res2a_branch2a\n",
+      "7 bn2a_branch2a\n",
+      "8 activation_51\n",
+      "9 res2a_branch2b\n",
+      "10 bn2a_branch2b\n",
+      "11 activation_52\n",
+      "12 res2a_branch2c\n",
+      "13 res2a_branch1\n",
+      "14 bn2a_branch2c\n",
+      "15 bn2a_branch1\n",
+      "16 merge_17\n",
+      "17 activation_53\n",
+      "18 res2b_branch2a\n",
+      "19 bn2b_branch2a\n",
+      "20 activation_54\n",
+      "21 res2b_branch2b\n",
+      "22 bn2b_branch2b\n",
+      "23 activation_55\n",
+      "24 res2b_branch2c\n",
+      "25 bn2b_branch2c\n",
+      "26 merge_18\n",
+      "27 activation_56\n",
+      "28 res2c_branch2a\n",
+      "29 bn2c_branch2a\n",
+      "30 activation_57\n",
+      "31 res2c_branch2b\n",
+      "32 bn2c_branch2b\n",
+      "33 activation_58\n",
+      "34 res2c_branch2c\n",
+      "35 bn2c_branch2c\n",
+      "36 merge_19\n",
+      "37 activation_59\n",
+      "38 res3a_branch2a\n",
+      "39 bn3a_branch2a\n",
+      "40 activation_60\n",
+      "41 res3a_branch2b\n",
+      "42 bn3a_branch2b\n",
+      "43 activation_61\n",
+      "44 res3a_branch2c\n",
+      "45 res3a_branch1\n",
+      "46 bn3a_branch2c\n",
+      "47 bn3a_branch1\n",
+      "48 merge_20\n",
+      "49 activation_62\n",
+      "50 res3b_branch2a\n",
+      "51 bn3b_branch2a\n",
+      "52 activation_63\n",
+      "53 res3b_branch2b\n",
+      "54 bn3b_branch2b\n",
+      "55 activation_64\n",
+      "56 res3b_branch2c\n",
+      "57 bn3b_branch2c\n",
+      "58 merge_21\n",
+      "59 activation_65\n",
+      "60 res3c_branch2a\n",
+      "61 bn3c_branch2a\n",
+      "62 activation_66\n",
+      "63 res3c_branch2b\n",
+      "64 bn3c_branch2b\n",
+      "65 activation_67\n",
+      "66 res3c_branch2c\n",
+      "67 bn3c_branch2c\n",
+      "68 merge_22\n",
+      "69 activation_68\n",
+      "70 res3d_branch2a\n",
+      "71 bn3d_branch2a\n",
+      "72 activation_69\n",
+      "73 res3d_branch2b\n",
+      "74 bn3d_branch2b\n",
+      "75 activation_70\n",
+      "76 res3d_branch2c\n",
+      "77 bn3d_branch2c\n",
+      "78 merge_23\n",
+      "79 activation_71\n",
+      "80 res4a_branch2a\n",
+      "81 bn4a_branch2a\n",
+      "82 activation_72\n",
+      "83 res4a_branch2b\n",
+      "84 bn4a_branch2b\n",
+      "85 activation_73\n",
+      "86 res4a_branch2c\n",
+      "87 res4a_branch1\n",
+      "88 bn4a_branch2c\n",
+      "89 bn4a_branch1\n",
+      "90 merge_24\n",
+      "91 activation_74\n",
+      "92 res4b_branch2a\n",
+      "93 bn4b_branch2a\n",
+      "94 activation_75\n",
+      "95 res4b_branch2b\n",
+      "96 bn4b_branch2b\n",
+      "97 activation_76\n",
+      "98 res4b_branch2c\n",
+      "99 bn4b_branch2c\n",
+      "100 merge_25\n",
+      "101 activation_77\n",
+      "102 res4c_branch2a\n",
+      "103 bn4c_branch2a\n",
+      "104 activation_78\n",
+      "105 res4c_branch2b\n",
+      "106 bn4c_branch2b\n",
+      "107 activation_79\n",
+      "108 res4c_branch2c\n",
+      "109 bn4c_branch2c\n",
+      "110 merge_26\n",
+      "111 activation_80\n",
+      "112 res4d_branch2a\n",
+      "113 bn4d_branch2a\n",
+      "114 activation_81\n",
+      "115 res4d_branch2b\n",
+      "116 bn4d_branch2b\n",
+      "117 activation_82\n",
+      "118 res4d_branch2c\n",
+      "119 bn4d_branch2c\n",
+      "120 merge_27\n",
+      "121 activation_83\n",
+      "122 res4e_branch2a\n",
+      "123 bn4e_branch2a\n",
+      "124 activation_84\n",
+      "125 res4e_branch2b\n",
+      "126 bn4e_branch2b\n",
+      "127 activation_85\n",
+      "128 res4e_branch2c\n",
+      "129 bn4e_branch2c\n",
+      "130 merge_28\n",
+      "131 activation_86\n",
+      "132 res4f_branch2a\n",
+      "133 bn4f_branch2a\n",
+      "134 activation_87\n",
+      "135 res4f_branch2b\n",
+      "136 bn4f_branch2b\n",
+      "137 activation_88\n",
+      "138 res4f_branch2c\n",
+      "139 bn4f_branch2c\n",
+      "140 merge_29\n",
+      "141 activation_89\n",
+      "142 res5a_branch2a\n",
+      "143 bn5a_branch2a\n",
+      "144 activation_90\n",
+      "145 res5a_branch2b\n",
+      "146 bn5a_branch2b\n",
+      "147 activation_91\n",
+      "148 res5a_branch2c\n",
+      "149 res5a_branch1\n",
+      "150 bn5a_branch2c\n",
+      "151 bn5a_branch1\n",
+      "152 merge_30\n",
+      "153 activation_92\n",
+      "154 res5b_branch2a\n",
+      "155 bn5b_branch2a\n",
+      "156 activation_93\n",
+      "157 res5b_branch2b\n",
+      "158 bn5b_branch2b\n",
+      "159 activation_94\n",
+      "160 res5b_branch2c\n",
+      "161 bn5b_branch2c\n",
+      "162 merge_31\n",
+      "163 activation_95\n",
+      "164 res5c_branch2a\n",
+      "165 bn5c_branch2a\n",
+      "166 activation_96\n",
+      "167 res5c_branch2b\n",
+      "168 bn5c_branch2b\n",
+      "169 activation_97\n",
+      "170 res5c_branch2c\n",
+      "171 bn5c_branch2c\n",
+      "172 merge_32\n",
+      "173 activation_98\n",
+      "174 avg_pool\n",
+      "Epoch 1/300\n",
+      "3840/3868 [============================>.] - ETA: 1s - loss: 0.6381 - acc: 0.7789"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py:1470: UserWarning: Epoch comprised more than `samples_per_epoch` samples, which might affect learning results. Set `samples_per_epoch` correctly to avoid this warning.\n",
+      "  warnings.warn('Epoch comprised more than '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 00000: val_loss improved from 0.60545 to 0.56201, saving model to ./checkpoints/weights.000-0.5620.hdf5\n",
+      "3904/3868 [==============================] - 188s - loss: 0.6358 - acc: 0.7800 - val_loss: 0.5620 - val_acc: 0.8115\n",
+      "Epoch 2/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.5396 - acc: 0.8190Epoch 00001: val_loss improved from 0.56201 to 0.55127, saving model to ./checkpoints/weights.001-0.5513.hdf5\n",
+      "3904/3868 [==============================] - 172s - loss: 0.5393 - acc: 0.8179 - val_loss: 0.5513 - val_acc: 0.8154\n",
+      "Epoch 3/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.4609 - acc: 0.8402Epoch 00002: val_loss improved from 0.55127 to 0.43090, saving model to ./checkpoints/weights.002-0.4309.hdf5\n",
+      "3924/3868 [==============================] - 174s - loss: 0.4591 - acc: 0.8415 - val_loss: 0.4309 - val_acc: 0.8535\n",
+      "Epoch 4/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.3636 - acc: 0.8789Epoch 00003: val_loss did not improve\n",
+      "3904/3868 [==============================] - 172s - loss: 0.3630 - acc: 0.8788 - val_loss: 0.4506 - val_acc: 0.8496\n",
+      "Epoch 5/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.3026 - acc: 0.8956Epoch 00004: val_loss improved from 0.43090 to 0.39957, saving model to ./checkpoints/weights.004-0.3996.hdf5\n",
+      "3904/3868 [==============================] - 172s - loss: 0.3015 - acc: 0.8960 - val_loss: 0.3996 - val_acc: 0.8691\n",
+      "Epoch 6/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.2612 - acc: 0.9122Epoch 00005: val_loss improved from 0.39957 to 0.38710, saving model to ./checkpoints/weights.005-0.3871.hdf5\n",
+      "3924/3868 [==============================] - 173s - loss: 0.2616 - acc: 0.9118 - val_loss: 0.3871 - val_acc: 0.8779\n",
+      "Epoch 7/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.2176 - acc: 0.9284Epoch 00006: val_loss improved from 0.38710 to 0.36136, saving model to ./checkpoints/weights.006-0.3614.hdf5\n",
+      "3904/3868 [==============================] - 173s - loss: 0.2157 - acc: 0.9293 - val_loss: 0.3614 - val_acc: 0.8936\n",
+      "Epoch 8/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.1827 - acc: 0.9380Epoch 00007: val_loss improved from 0.36136 to 0.32231, saving model to ./checkpoints/weights.007-0.3223.hdf5\n",
+      "3904/3868 [==============================] - 172s - loss: 0.1819 - acc: 0.9380 - val_loss: 0.3223 - val_acc: 0.9102\n",
+      "Epoch 9/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.1744 - acc: 0.9484Epoch 00008: val_loss improved from 0.32231 to 0.28482, saving model to ./checkpoints/weights.008-0.2848.hdf5\n",
+      "3924/3868 [==============================] - 172s - loss: 0.1732 - acc: 0.9488 - val_loss: 0.2848 - val_acc: 0.9160\n",
+      "Epoch 10/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.1353 - acc: 0.9539Epoch 00009: val_loss improved from 0.28482 to 0.25652, saving model to ./checkpoints/weights.009-0.2565.hdf5\n",
+      "3904/3868 [==============================] - 172s - loss: 0.1366 - acc: 0.9539 - val_loss: 0.2565 - val_acc: 0.9297\n",
+      "Epoch 11/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.1272 - acc: 0.9581Epoch 00010: val_loss did not improve\n",
+      "3904/3868 [==============================] - 172s - loss: 0.1277 - acc: 0.9580 - val_loss: 0.2724 - val_acc: 0.9277\n",
+      "Epoch 12/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.1288 - acc: 0.9570Epoch 00011: val_loss did not improve\n",
+      "3924/3868 [==============================] - 172s - loss: 0.1286 - acc: 0.9569 - val_loss: 0.3084 - val_acc: 0.9111\n",
+      "Epoch 13/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.1028 - acc: 0.9648Epoch 00012: val_loss improved from 0.25652 to 0.24134, saving model to ./checkpoints/weights.012-0.2413.hdf5\n",
+      "3904/3868 [==============================] - 172s - loss: 0.1032 - acc: 0.9644 - val_loss: 0.2413 - val_acc: 0.9414\n",
+      "Epoch 14/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.1017 - acc: 0.9661Epoch 00013: val_loss did not improve\n",
+      "3904/3868 [==============================] - 173s - loss: 0.1024 - acc: 0.9659 - val_loss: 0.2967 - val_acc: 0.9229\n",
+      "Epoch 15/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.0892 - acc: 0.9705Epoch 00014: val_loss did not improve\n",
+      "3924/3868 [==============================] - 173s - loss: 0.0903 - acc: 0.9704 - val_loss: 0.3723 - val_acc: 0.9092\n",
+      "Epoch 16/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.0811 - acc: 0.9745Epoch 00015: val_loss improved from 0.24134 to 0.22489, saving model to ./checkpoints/weights.015-0.2249.hdf5\n",
+      "3904/3868 [==============================] - 172s - loss: 0.0821 - acc: 0.9746 - val_loss: 0.2249 - val_acc: 0.9424\n",
+      "Epoch 17/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.0816 - acc: 0.9677Epoch 00016: val_loss did not improve\n",
+      "3904/3868 [==============================] - 172s - loss: 0.0805 - acc: 0.9682 - val_loss: 0.3126 - val_acc: 0.9229\n",
+      "Epoch 18/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.0678 - acc: 0.9790Epoch 00017: val_loss improved from 0.22489 to 0.19330, saving model to ./checkpoints/weights.017-0.1933.hdf5\n",
+      "3924/3868 [==============================] - 174s - loss: 0.0671 - acc: 0.9791 - val_loss: 0.1933 - val_acc: 0.9434\n",
+      "Epoch 19/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.0576 - acc: 0.9810Epoch 00018: val_loss did not improve\n",
+      "3904/3868 [==============================] - 171s - loss: 0.0583 - acc: 0.9805 - val_loss: 0.2391 - val_acc: 0.9443\n",
+      "Epoch 20/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.0689 - acc: 0.9760Epoch 00019: val_loss did not improve\n",
+      "3904/3868 [==============================] - 172s - loss: 0.0682 - acc: 0.9764 - val_loss: 0.2257 - val_acc: 0.9492\n",
+      "Epoch 21/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.0716 - acc: 0.9767Epoch 00020: val_loss did not improve\n",
+      "3924/3868 [==============================] - 173s - loss: 0.0706 - acc: 0.9771 - val_loss: 0.2111 - val_acc: 0.9502\n",
+      "Epoch 22/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.0514 - acc: 0.9828Epoch 00021: val_loss did not improve\n",
+      "3904/3868 [==============================] - 171s - loss: 0.0512 - acc: 0.9828 - val_loss: 0.2299 - val_acc: 0.9395\n",
+      "Epoch 23/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.0485 - acc: 0.9836Epoch 00022: val_loss did not improve\n",
+      "3904/3868 [==============================] - 171s - loss: 0.0495 - acc: 0.9836 - val_loss: 0.3130 - val_acc: 0.9365\n",
+      "Epoch 24/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.0497 - acc: 0.9852Epoch 00023: val_loss did not improve\n",
+      "\n",
+      "Epoch 00023: reducing learning rate to 9.999999747378752e-06.\n",
+      "3924/3868 [==============================] - 173s - loss: 0.0503 - acc: 0.9852 - val_loss: 0.2885 - val_acc: 0.9404\n",
+      "Epoch 25/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.0527 - acc: 0.9826Epoch 00024: val_loss did not improve\n",
+      "3904/3868 [==============================] - 173s - loss: 0.0519 - acc: 0.9828 - val_loss: 0.2361 - val_acc: 0.9453\n",
+      "Epoch 26/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.0420 - acc: 0.9872Epoch 00025: val_loss did not improve\n",
+      "3904/3868 [==============================] - 173s - loss: 0.0415 - acc: 0.9874 - val_loss: 0.2471 - val_acc: 0.9531\n",
+      "Epoch 27/300\n",
+      "3860/3868 [============================>.] - ETA: 0s - loss: 0.0409 - acc: 0.9868Epoch 00026: val_loss did not improve\n",
+      "3924/3868 [==============================] - 173s - loss: 0.0404 - acc: 0.9870 - val_loss: 0.2242 - val_acc: 0.9531\n",
+      "Epoch 28/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.0308 - acc: 0.9914Epoch 00027: val_loss did not improve\n",
+      "3904/3868 [==============================] - 171s - loss: 0.0305 - acc: 0.9915 - val_loss: 0.2076 - val_acc: 0.9541\n",
+      "Epoch 29/300\n",
+      "3840/3868 [============================>.] - ETA: 0s - loss: 0.0308 - acc: 0.9919Epoch 00028: val_loss did not improve\n",
+      "\n",
+      "Epoch 00028: reducing learning rate to 9.999999747378752e-07.\n",
+      "3904/3868 [==============================] - 171s - loss: 0.0315 - acc: 0.9918 - val_loss: 0.2541 - val_acc: 0.9521\n",
+      "Epoch 00028: early stopping\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f00fa0b8f28>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -703,11 +995,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exist data_test_BBCrop_270_480.pickle. Loading test data from file.\n"
+     ]
+    }
+   ],
    "source": [
     "#Load test data\n",
     "\n",
@@ -746,11 +1046,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from ./checkpoints/weights.017-0.1933.hdf5\n",
+      "12408/12408 [==============================] - 348s   \n"
+     ]
+    }
+   ],
    "source": [
     "#test submission\n",
     "\n",
@@ -765,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -785,17 +1094,6 @@
     "    test_preds_im = np.asarray(test_preds_im)\n",
     "    test_preds_im = np.mean(test_preds_im, axis=0)\n",
     "    test_preds[j] = test_preds_im"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "train_files[0][:-4]"
    ]
   },
   {
